--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"No tests yet\" && exit 0"
   },
   "dependencies": {
+    "@el-patio/database": "1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
