--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     ports:
       - "3000:3000"
     environment:
+      NODE_ENV: ${NODE_ENV:-development}
       PORT: 3000
       MONGO_URI: mongodb://mongodb:27017/el_patio_db
       JWT_SECRET: ${JWT_SECRET:-dev-secret}
