--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd apps/webapp && npm run build",
+  "buildCommand": "cd apps/webapp; npm run build",
   "outputDirectory": "apps/webapp/dist",
   "framework": "vite",
   "installCommand": "npm install",
