--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "buildCommand": "(cd apps/webapp && npm run build) || (cd ../.. && cd apps/webapp && npm run build)",
+  "buildCommand": "if [ -d apps/webapp ]; then npm run build -w webapp; else (cd ../.. && npm run build -w webapp); fi",
   "outputDirectory": "apps/webapp/dist",
   "framework": "vite",
-  "installCommand": "npm install",
+  "installCommand": "if [ -d apps/webapp ]; then npm install; else (cd ../.. && npm install); fi",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ]
