--- a/apps/api-gateway/.env.example
+++ b/apps/api-gateway/.env.example
@@ -2,3 +2,7 @@ PORT=3000
 MONGODB_URI=mongodb://localhost:27017/elpatio
 TELEGRAM_BOT_TOKEN=
 JWT_SECRET=change-me-in-production
+
+# Orígenes permitidos por CORS (separados por coma). Para webapp en Vercel + ngrok:
+# CORS_ORIGIN=https://proyecto-elpatio-v2-webapp.vercel.app,https://tu-url.ngrok-free.app
+CORS_ORIGIN=http://localhost:5173,http://127.0.0.1:5173
