--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@twa-dev/sdk": "^7.0.0",
+    "eruda": "^2.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
