cambiado como se lee el initData de telegram

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # ============== API Gateway ==============
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/elpatio
+# URI de MongoDB (local o Atlas). Variable estándar para el api-gateway.
+MONGO_URI=mongodb://localhost:27017/el_patio_db
 TELEGRAM_BOT_TOKEN=
 JWT_SECRET=
 
@@ -12,16 +13,19 @@ JWT_SECRET=
 API_GATEWAY_URL=http://localhost:3000
 
 # ============== Bot Telegram ==============
-# TELEGRAM_BOT_TOKEN= (mismo que api-gateway si compartido)
+# BOT_TOKEN= (o TELEGRAM_BOT_TOKEN según cómo lo inyectes en Docker)
 WEBAPP_URL=https://tu-webapp.vercel.app
 API_GATEWAY_URL=http://localhost:3000
 
 # ============== Webapp (Vite - usar en apps/webapp/.env) ==============
+# Local: suele ser http://localhost:3000 cuando el api-gateway corre en Docker/local.
+# Vercel: URL pública del API (p. ej. https://el-patio-api.fly.dev si usas Fly.io).
 # VITE_API_URL=http://localhost:3000
 # VITE_WS_URL=http://localhost:3001
 
 # ============== Dashboard (Vite - usar en apps/dashboard/.env) ==============
 # VITE_API_URL=http://localhost:3000
 
-# ============== Producción ==============
-# MongoDB Atlas URI, URLs públicas de Fly.io para API/Game, URLs de Vercel para webapp/dashboard
+# ============== Producción / Fly.io ==============
+# Para el api-gateway en Fly.io: configurar MONGO_URI, JWT_SECRET, TELEGRAM_BOT_TOKEN,
+# CORS_ORIGIN (incluir URL de la webapp en Vercel si aplica) vía fly secrets set.
