--- a/apps/api-gateway/.env.example
+++ b/apps/api-gateway/.env.example
@@ -1,8 +1,8 @@
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/elpatio
+MONGO_URI=mongodb://localhost:27017/el_patio_db
 TELEGRAM_BOT_TOKEN=
 JWT_SECRET=change-me-in-production
 
-# Orígenes permitidos por CORS (separados por coma). Para webapp en Vercel + ngrok:
-# CORS_ORIGIN=https://proyecto-elpatio-v2-webapp.vercel.app,https://tu-url.ngrok-free.app
-CORS_ORIGIN=http://localhost:5173,http://127.0.0.1:5173
+# Orígenes permitidos por CORS (separados por coma). Incluir local 5173/5174 y la URL de Vercel si usas webapp desplegada:
+# CORS_ORIGIN=http://localhost:5173,http://localhost:5174,http://127.0.0.1:5173,http://127.0.0.1:5174,https://proyecto-elpatio-v2-webapp.vercel.app
+CORS_ORIGIN=http://localhost:5173,http://127.0.0.1:5173,http://localhost:5174,http://127.0.0.1:5174
