Creada la pagina wallet con su correspondiente logica para leer saldo y transacciones

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "seed": "node seed.js"
+    "seed": "node seed.js",
+    "test:concurrencia": "node test-concurrencia.js"
   },
   "dependencies": {
     "mongoose": "^8.0.3"
